Mises à jour : sidebar d'horiznotal à vertical / Sidebar Commune ou personnalisée / Validation des soumissions unitaire ou groupée / Nouveaux Thèmes / Mode Sombre
